boreal/tests/assets/invalid_files/compilation/invalid_identifier_type3.yar
// [error: invalid identifier type]
import "tests"

rule c {
    condition:
        tests.string_array.foo == /aab/
}
